# Copyright (C) 2020 Alexandros Theodotou <alex at zrythm dot org>
#
# This file is part of ZPlugins
#
# ZPlugins is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# ZPlugins is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with ZPlugins.  If not, see <https://www.gnu.org/licenses/>.

option (
  'strict_flags', type: 'boolean', value: false,
  description: 'Enable strict compilation flags')

option (
  'lv2_core_path', type: 'string', value: '/usr/lib/lv2',
  description: 'Path to LV2 core spec')

option (
  'lv2dir', type: 'string', value: 'lib/lv2',
  description: 'LV2 installation dir under the prefix')

option (
  'plugins', type : 'array',
  choices : [
    'Chordz', 'Chorus', 'CompressorSP', 'Delay',
    'Distortion',
    'EQ', 'LFO', 'LimiterSP', 'PhaserSP',
    'PitchSP', 'Saturator',
    'VerbSP', 'Saw', 'TestPlugin',
    ],
  value: [ 'Chordz', 'LFO', 'Saw', ],
  description: 'Plugins to build')

option (
  'trial_ver', type: 'boolean', value: false,
  description: 'Build trial version with limited functionality')

option (
  'make', type: 'string', value: 'make',
  description: 'Binary to use for GNU make')
