# Copyright (C) 2020 Alexandros Theodotou <alex at zrythm dot org>
#
# This file is part of ZPlugins
#
# ZPlugins is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# ZPlugins is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with ZPlugins.  If not, see <https://www.gnu.org/licenses/>.

soundpipe_lib_files = files([
  join_paths ('dr_wav', 'dr_wav.c'),
  join_paths ('fft', 'fft.c'),
  join_paths ('inih', 'ini.c'),
  join_paths ('kissfft', 'kiss_fft.c'),
  join_paths ('kissfft', 'kiss_fftr.c'),
  join_paths ('openlpc', 'openlpc.c'),
  join_paths ('spa', 'spa.c'),
  ])
